# srcs/controller/user.js
@@ -1,9 +1,11 @@
 /* eslint-disable camelcase */
 const express = require('express');
+const { v4: uuidv4 } = require('uuid');
+const multer = require('../config/multer');
 const loginService = require('../service/login');
 const jwtService = require('../service/jwt');
+const imageService = require('../service/image');
 const logger = require('../config/logger');
-const multer = require('../config/multer');
 
 const router = express.Router();
 
@@ -14,6 +16,7 @@ router.get('/me', async (req, res) => {
     if (verify_ret.ok) {
       logger.info('verify_ret: ', verify_ret);
       const user = await loginService.findUserById(verify_ret.id);
+      const image = await imageService.findImageById(user.profile_image_id);
       logger.info('user: ', user);
       if (user == null) {
         res.status(404).json({
@@ -24,7 +27,8 @@ router.get('/me', async (req, res) => {
         res.status(200).json({
           code: 200,
           message: 'user found',
-          user
+          user,
+          url: image.url
         });
       }
     } else {
@@ -48,7 +52,21 @@ router.put('/me', multer.single('image'), async (req, res) => {
     const verify_ret = jwtService.verifyToken(token, process.env.SECRET_KEY);
     const { user_name, comment } = req.body;
     if (verify_ret.ok) {
-      const user = await loginService.update_user(verify_ret.id, user_name, comment);
+      let filename = null;
+      let image = null;
+      if (req.file) {
+        filename = uuidv4() + req.file.originalname;
+        const user = await loginService.findUserById(verify_ret.id);
+        if (user.profile_image_id != null && user.profile_image_id !== '') {
+          await imageService.deleteImageById(user.profile_image_id);
+        }
+        image = await imageService.createImage(req.file, filename);
+      }
+      let image_id = null;
+      if (image != null) {
+        image_id = image.id;
+      }
+      const user = await loginService.update_user(verify_ret.id, user_name, comment, image_id);
       logger.info('user: ', user);
       if (user == null) {
         res.status(404).json({
@@ -59,7 +77,8 @@ router.put('/me', multer.single('image'), async (req, res) => {
         res.status(200).json({
           code: 200,
           message: 'user updated',
-          user
+          user,
+          image: image.url
         });
       }
     } else {
