# swagger/user.yaml
@@ -74,16 +74,21 @@
       x-name: body
       required: true
       content:
-        application/json:
+        multipart/form-data:
           schema:
+            type: object
             required:
               - user_name
               - comment
+              - image
             properties:
               user_name:
                 type: string
               comment:
                 type: string
+              image:
+                type: string
+                format: binary
           example:
             user_name: '홍길동'
             comment: '안녕하세요.'
